--- a/src/App.css
+++ b/src/App.css
@@ -791,6 +791,7 @@ body {
 --------------------- LEXICAL COMPONENT SPECIFIC STYLING ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 */
 .tool-icons{
+  display: inline-block;
   padding: 10px;
   margin: 2px;
   border: 1px solid black;
