Sync editor state with formatting between modal and main editor, ensure rich text updates

--- a/src/App.css
+++ b/src/App.css
@@ -840,8 +840,6 @@ html {
 /**
 --------------------- LEXICAL COMPONENT SPECIFIC STYLING ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 */
-.lexical-editor {
-}
 
 .content-editable-area p {
   white-space: pre-wrap; /* This ensures that new line characters are respected */
@@ -859,6 +857,9 @@ html {
   margin: 10px;
 }
 
+.modal-lexical-editor .content-editable-area{
+  min-height: 75vh;
+}
 
 /**
 --------------------- TOOLBAR COMPONENT SPECIFIC STYLING ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
