--- a/src/App.css
+++ b/src/App.css
@@ -398,8 +398,8 @@ html {
 }
 
 .expand-icon{
-  position: relative;
-  left:40%
+
+  align-self: center;
 }
 
 #notes-list-div #full-page-div {
@@ -474,10 +474,6 @@ html {
   text-transform: capitalize;
 }
 
-/*👉#notes-list-div #files-accepted {
-  text-align: center;
-}👈*/
-
 #notes-list-div #entire-note-upload-div {
   flex: 5;
   display: flex;
@@ -523,11 +519,12 @@ html {
 }
 
 #notes-list-div #left-part-div {
+  display: flex;
+  flex-direction: column;
   text-align: center;
   height: 100%;
   width: 100%;
   margin-right: 5%;
-  /* background-color: #2c3e5058; */
 }
 
 #notes-list-div #left-part-div input {
@@ -537,13 +534,14 @@ html {
   font-size: 16px;
   cursor: pointer;
   border-radius: 12px;
+  width: 50%;
+  align-self: center;
 }
 
 #notes-list-div #right-part-div {
   flex: 2;
   text-align: center;
-/*👉  height: 100%;
-👈*/  display: flex;
+  display: flex;
   flex-direction: column;
   align-items: center;
 }
@@ -560,26 +558,19 @@ html {
   padding: 15px;
 }
 
-#notes-list-div #right-part-div textarea,
-#paste-note-div #note-text,
-#modal-note-content{
-  width: 80%;
+.files-accepted p{
+  max-width: 50% !important;
+}
+#paste-note-div {
   height: 80%;
-  background-color: transparent;
-  resize: none;
-  border: none;
-  box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.2);
-  border-radius: 10px;
-  font-size: 16px;
+  width: auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+
 }
 
-#modal-note-content{
-  width: 80%;
-  height: 80vh; /* larger height since the purpose of the modal is to display the note content larger. */
-  background-color: #4c6f8f63;
-}
-
-#paste-note-div #note-title, #modal-note-title{
+#paste-note-div #note-title{
   background-color: transparent;
   border: none;
   margin-bottom: 10px;
@@ -591,34 +582,18 @@ html {
   height: auto;
 }
 
-#modal-note-title{
-  background-color: #4c6f8f63;
-  margin-top: 10px;
-}
-
 #paste-note-div #note-title::placeholder{
   text-align: left;
 }
 
-#notes-list-div #right-part-div textarea:focus,
-#paste-note-div textarea:focus,
-#modal-note-title:focus,
-#modal-note-content:focus {
+#paste-note-div textarea:focus{
   outline: none;
 }
 
-#notes-list-div #right-part-div textarea::placeholder,
-#paste-note-div textarea::placeholder,
-#modal-note-title::placeholder,
-#modal-note-content::placeholder {
+#paste-note-div textarea::placeholder{
   color: #ffffffa1;
   font-size: 20px;
   text-align: center;
-}
-
-#paste-note-div {
-  height: 80%;
-  width: auto;
 }
 
 
@@ -809,44 +784,62 @@ html {
 }
 
 .code-editor-container {
+  display: flex;
+  flex-direction: column;
   width: auto;
   height: 75%;
   margin: 10px;
+  align-self: center;
 }
 
 .run-code-button{
-  position: relative;
-  bottom: 75%; /* the height of the code editor container */
-  left: 50%;
-  transform: translate(-100%, -100%); /* translation relative to the buttons own size. */
   color: whitesmoke;
-
+  width: 100px;
   background-color: rgba(0, 94, 255, 0.952);
   border: 1px solid rgb(0, 25, 68);
   border-radius: 5px;
   padding: 5px;
+  margin: 5px;
+  align-self: flex-end;
 }
 
 .run-code-button:hover{
   cursor: pointer;
 }
 
-/*👉.code-editor-output{
-  width: 10px;
-  height: 10px;
-}👈*/
+.code-editor-output{
+  align-self: center;
+  width: 80%;
+  height: 25%;
+  background-color: #0000006d;
+  resize: none;
+  border: none;
+  box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+}
 
+.code-editor-output::placeholder{
+  font-size:medium;
+  color: #ffffffa1;
+  text-align: center;
+}
 
 /**
 --------------------- LEXICAL COMPONENT SPECIFIC STYLING ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 */
+.main-editor-div{
+
+}
 
 .content-editable-area p {
   white-space: pre-wrap; /* This ensures that new line characters are respected */
   word-wrap: break-word;  /* Proper word wrapping */
   overflow-y: auto; /* Scroll only when overflowing vertically */
-  min-height: 100px; /* The initial paragraph will be this height but allows to be flexible and continue growing. */
+  min-height: 200px; /* The initial paragraph will be this height but allows to be flexible and continue growing. */
   margin: 0px;
+  background: none;
+  box-shadow: none;
+  border: none;
 }
 
 .content-editable-area {
@@ -855,6 +848,7 @@ html {
   overflow-y: auto; /* Scroll only when overflowing vertically */
   max-height: 200px; /* Set a fixed height (adjust based on your layout) */
   margin: 10px;
+  background-color: #2C3E50;
 }
 
 .modal-lexical-editor .content-editable-area{
@@ -864,8 +858,15 @@ html {
 /**
 --------------------- TOOLBAR COMPONENT SPECIFIC STYLING ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 */
+
+.toolbar-container{
+  
+/*👉  justify-content: space-around;
+👈*/}
+
 .tool-icons{
   display: inline-block;
+  flex-direction: column;
   padding: 10px;
   margin: 2px;
   border: 1px solid rgba(0, 25, 68, 0.179);
