--- a/src/App.css
+++ b/src/App.css
@@ -336,6 +336,15 @@ html {
 /**
 --------------------- NOTE PAGE SPECIFIC STYLING ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 */
+.share-button{
+
+  border-radius: 5px;
+}
+
+.share-button:hover{
+  cursor: pointer;
+}
+
 
 #note-description-div p{
   white-space: pre-wrap; 
@@ -559,6 +568,7 @@ html {
 .files-accepted p{
   max-width: 50% !important;
 }
+
 #paste-note-div {
   height: 80%;
   width: auto;
@@ -809,13 +819,14 @@ html {
   align-self: center;
   color: #ffffffa1;
   width: 80%;
-  height: 25%;
+  height: 30%;
   background-color: #0000006d;
   resize: none;
   border: none;
   box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
   padding: 10px;
+  margin: 10px;
 }
 
 .code-editor-output::placeholder{
